# asgi-cc

./: .gitignore  LICENSE  README-pypi.md  README.md  pyproject.toml
.github/workflows/: benchmark.yml  ci.yml  release.yml
docs/: architecture.md  benchmark.md  cranker-v3-protocol.md
examples/: fastapi_service.py
fast_cc/: config.py
integration/: __init__.py  benchmark.py  common.py  run_benchmark.sh  run_e2e.py  run_e2e.sh  verify_connector_behaviors.py  verify_dns_lookup.py  verify_dns_refresh.py  verify_http_methods.py  verify_patterns.py  verify_runtime.py
integration/example_app/: fastapi_service.py
integration/java_app/: Dockerfile  pom.xml
integration/java_app/src/main/java/: RunJavaBenchApp.java
integration/patterns/: middleware.py  wrapper.py
integration/router/: Dockerfile  pom.xml
integration/router/src/main/java/: RunRouter.java
scripts/: verify_e2e.py
src/asgi_cc/: __init__.py  config.py  connector.py  protocol.py
src/fastcc/: config.py  connector.py  protocol.py
