[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asgi-cc"
version = "0.0.1"
description = "Experimental Cranker v3 connector scaffold for ASGI apps"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "websockets>=15.0.0",
]

[dependency-groups]
dev = [
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "uvicorn>=0.34.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["asgi_cc*"]
